language/move-lang/tests/move_check/parser/unicode/non_whitespace_in_documentation_multiline_comment.exp
error[E01001]: invalid character
  ┌─ tests/move_check/parser/unicode/non_whitespace_in_documentation_multiline_comment.move:6:52
  │
6 │ /** This is a documentation comment, so Unicode is ダメ 🚫 */
  │                                                    ^^ Invalid character 'ダ' in documentation comment

