language/move-lang/tests/move_check/parser/unicode/non_whitespace_in_documentation_multiline_comment.move
address 0x1 {

/* This is not a documentation comment, so Unicode is fine 🙌
   /** This nested comment looks like a documentation comment but is not,
       so Unicode is fine here as well 🤔 */ */
/** This is a documentation comment, so Unicode is ダメ 🚫 */
module Temp {
}

}
